# myvinted

./: .gitignore  README.md  pyproject.toml
myvinted/: config.yaml  data.py  vintedapi.py
myvinted/dataclasses/: base.py  item.py  language.py
